test/redefined_label.err
ERROR: line: 9, col: 1
"label1" has already been defined.
